<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.ScanFragment"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/image_placeholder"
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/photo"
        android:src="@drawable/placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitleUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/upload_file"
        android:textSize="24sp"
        android:fontFamily="@font/semibold"
        android:textColor="@color/soft_purple"/>

    <TextView
        android:id="@+id/textDescriptionUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textTitleUpload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/desc_upload_file"
        android:textAlignment="center"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/regular"
        android:textColor="@color/soft_purple"/>

    <LinearLayout
        android:id="@+id/container_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:layout_marginBottom="100dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_upload"
            android:src="@drawable/ic_add"
            android:layout_marginHorizontal="32dp"
            android:backgroundTint="@color/background_purple"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/analyze_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_analyze"
            android:src="@drawable/ic_analyze"
            android:layout_marginHorizontal="32dp"
            android:backgroundTint="@color/background_purple"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>