<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_news"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/sampleresult"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"/>

        <TextView
            android:id="@+id/tv_news_title"
            android:fontFamily="@font/bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="16dp"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_news"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/sample_title_news" />

        <TextView
            android:id="@+id/tv_news_description"
            android:fontFamily="@font/regular"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:maxLines="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_news"
            app:layout_constraintTop_toBottomOf="@id/tv_news_title"
            android:text="@string/sample_desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>