<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.WelcomeActivity"
    android:background="@drawable/welcomeimage">

    <ImageView
        android:id="@+id/welcome_logo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="200dp"/>

    <TextView
        android:id="@+id/welcome_text_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/regular"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textSize="28sp"
        android:letterSpacing="0.2"
        app:layout_constraintTop_toBottomOf="@id/welcome_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/welcome_motto_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motto"
        android:fontFamily="@font/regular"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/welcome_text_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/welcome_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_motto_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:shapeAppearance="@style/ShapeAppearance.custom.corner">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/your_health_wellness_on_demand"
                android:textSize="20sp"
                android:fontFamily="@font/semibold"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/welcome_text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:maxLines="2"
                android:lineHeight="25sp"
                android:text="@string/sample_desc"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@id/title_welcome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:fontFamily="@font/medium"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome_text_description"
                android:backgroundTint="@color/soft_purple"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
                />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/have_account"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textColor="@color/soft_purple"
                android:fontFamily="@font/medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registerButton"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/white"
                android:background="@android:color/transparent"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>