<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.ProfileFragment"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/title_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/semibold"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_profile"
        app:layout_constraintTop_toBottomOf="@id/title_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/photo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                tools:src="@tools:sample/avatars"
                />

            <TextView
                android:id="@+id/name_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_name"
                app:layout_constraintTop_toBottomOf="@id/image_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/semibold"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/email_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_email"
                app:layout_constraintTop_toBottomOf="@id/name_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/light"
                android:textSize="12sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        app:layout_constraintTop_toBottomOf="@id/card_profile"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20sp"
        android:fontFamily="@font/bold"
        android:textColor="@color/white"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_card_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="10dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/title_setting">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon_profile"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/photo"
                android:src="@drawable/ic_user"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/text_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:textSize="14sp"
                android:text="@string/my_profile"
                app:layout_constraintStart_toEndOf="@id/icon_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="20dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_card_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/profile_card_menu">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon_rating"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/photo"
                android:src="@drawable/ic_user"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/text_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:textSize="14sp"
                android:text="@string/my_profile"
                app:layout_constraintStart_toEndOf="@id/icon_rating"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="20dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_card_requirement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/profile_card_rating">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon_requirement"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_user"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/text_requirement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:textSize="14sp"
                android:text="@string/my_profile"
                app:layout_constraintStart_toEndOf="@id/icon_requirement"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="20dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_card_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/profile_card_requirement">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon_privacy"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_user"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/text_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:textSize="14sp"
                android:text="@string/my_profile"
                app:layout_constraintStart_toEndOf="@id/icon_privacy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="20dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        app:layout_constraintTop_toBottomOf="@id/profile_card_privacy"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20sp"
        android:fontFamily="@font/bold"
        android:textColor="@color/soft_purple"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/title_account">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon_logout"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_user"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/text_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:textSize="14sp"
                android:text="@string/my_profile"
                app:layout_constraintStart_toEndOf="@id/icon_logout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="20dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>