<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ResultActivity"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/title_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/title_page_result"
        android:textSize="16sp"
        android:fontFamily="@font/semibold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_result"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="centerCrop"/>
            
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/left_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/soft_purple"
                app:layout_constraintTop_toBottomOf="@id/image_result"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/right_card"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/left_card_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prediction"
                        android:textColor="@color/white"
                        android:fontFamily="@font/semibold"
                        android:textSize="16sp"
                        android:layout_marginBottom="4dp"
                        android:textAlignment="center"
                        />

                    <TextView
                        android:id="@+id/left_card_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/result"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/light"
                        android:layout_marginBottom="4dp"
                        />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/right_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/soft_purple"
                app:layout_constraintStart_toEndOf="@id/left_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_result"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/right_card_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prediction"
                        android:textColor="@color/white"
                        android:fontFamily="@font/semibold"
                        android:textSize="16sp"
                        android:layout_marginBottom="4dp"
                        android:textAlignment="center"
                        />

                    <TextView
                        android:id="@+id/right_card_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/result"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/light"
                        android:layout_marginBottom="4dp"
                        />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tv_related_articles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/article"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/left_card" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_related_articles"
                android:layout_marginHorizontal="16dp"
                tools:listitem="@layout/item_news"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>